--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,21 +2,23 @@ apiVersion: skaffold/v1alpha5
 kind: Config
 build:
   artifacts:
-    - image: gcr.io/hidekuro-sandbox/drupod
+    - image: hidekuro/drupod
       context: .
   tagPolicy:
     sha256: {}
 deploy:
+  # default deployer for local
   helm:
     releases:
       - name: drupod
+        namespace: drupod-local
         chartPath: k8s-helm/drupod
         imageStrategy:
           helm: {}
         valuesFiles:
           - k8s-helm/drupod/values.yaml
         values:
-          image: gcr.io/hidekuro-sandbox/drupod
+          image: hidekuro/drupod
         setValueTemplates:
           developMode: "{{ .DEVELOP_MODE }}"
           drupal.db.password: "{{ .DRUPAL_DB_PASSWORD }}"
