--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     ports:
       - "10080:80"
     environment:
-      SERVER_NAME: "drupod.k8s.internal"
+      SERVER_NAME: "_"
       PHP_FPM_HOST: "drupal"
     command: ["sh", "-c", "envsubst '$$SERVER_NAME $$PHP_FPM_HOST' < /tmp/nginx-conf/drupal.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
     depends_on:
